tests/NormalTests/paczka1/small_fuzzy/72691757.err
Error in line 2: A776 A556 33,37
Error in line 1: uUI6shKa6p A776 65,0
Error in line 8: sshvAEf S927 32,4
